[project]
name = "arbor-trading"
version = "0.1.0"
description = "Arbor dice roll simulator using Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "streamlit",
    "numpy",
    "plotly",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project.scripts]
arbor-dice = "streamlit:run"